src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <inlineHelpText>this field gets updated according to area field of contact or lead.</inlineHelpText>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Awareness_Type__c</fullName>
        <inlineHelpText>Select one of these issues for which you want to volunteer.</inlineHelpText>
        <label>Campaign Awareness Type</label>
        <picklist>
            <picklistValues>
                <fullName>Health Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organ Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Nourishment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participation_Role__c</fullName>
        <inlineHelpText>What do you want to register as?</inlineHelpText>
        <label>Participation Role</label>
        <picklist>
            <picklistValues>
                <fullName>Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <recordTypes>
        <fullName>Volunteer</fullName>
        <active>true</active>
        <description>These campaign members are participating as volunteers</description>
        <label>Volunteer</label>
    </recordTypes>
    <validationRules>
        <fullName>Area_should_not_be_null</fullName>
        <active>false</active>
        <description>This rule checks if the area field on campaign member is null or not.</description>
        <errorConditionFormula>NOT (ISPICKVAL( Area__c ,&apos;North&apos;) ||  ISPICKVAL( Area__c ,&apos;South&apos;) ||  ISPICKVAL( Area__c ,&apos;East&apos;) ||  ISPICKVAL( Area__c,&apos;West&apos;))&amp;&amp;($Setup.ValidationSetting__c.Activate_validation_rules__c)</errorConditionFormula>
        <errorDisplayField>Area__c</errorDisplayField>
        <errorMessage>Area should not be Null. Please select one area.</errorMessage>
    </validationRules>
</CustomObject>